--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
 
     <string name="made_it">Made it</string>
     <string name="liked_it">Liked it</string>
-    <string name="notes">notes</string>
+    <string name="notes">Added Notes</string>
 </resources>
